# semaphore-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  cspell.json  libsemaphore.h  mit-license.md  publish_all.sh  release-plz.toml  rustfmt.toml  testfile
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: audit.yml  build-and-test.yml  build-test-deploy.yml  cargo-vet.yml  ci.yml  otto-review-gate.yml  release-crates.yml  relyance-sci.yml
benches/: cascading_merkle_tree.rs  dynamic_merkle_tree.rs  lazy_merkle_tree.rs  mimc.rs  proof.rs
crates/ark-circom/: Cargo.toml
crates/ark-circom/src/: ethereum.rs  lib.rs  zkey.rs
crates/ark-zkey/: Cargo.toml  README.md
crates/ark-zkey/src/: lib.rs  semaphore.16.arkzkey
crates/circom-witness-rs/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
crates/circom-witness-rs/include/: witness.h
crates/circom-witness-rs/script/: replace.sh
crates/circom-witness-rs/src/: field.rs  generate.rs  graph.rs  lib.rs
crates/hasher/: Cargo.toml
crates/hasher/src/: lib.rs
crates/js/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.mjs  build_and_publish.sh  whatever.mjs
crates/js/example/: index.mjs  index.ts  package-lock.json  package.json
crates/js/src/: lib.rs
crates/keccak/: Cargo.toml
crates/keccak/src/: keccak.rs  lib.rs  sha3.rs
crates/poseidon/: Cargo.toml
crates/poseidon/src/: constants.rs  lib.rs  poseidon.rs
crates/proof/: Cargo.toml
crates/proof/src/: ark.rs  compression.rs  lib.rs  packing.rs
crates/semaphore/: Cargo.toml  README.md  build.rs
crates/semaphore-depth-config/: Cargo.toml
crates/semaphore-depth-config/src/: lib.rs
crates/semaphore-depth-macros/: Cargo.toml
crates/semaphore-depth-macros/src/: lib.rs
crates/semaphore/benches/: cascading_merkle_tree.rs  lazy_merkle_tree.rs
crates/semaphore/examples/abort/: main.rs
crates/semaphore/src/: circuit.rs  field.rs  hash.rs  identity.rs  lib.rs  packed_proof.rs  poseidon_tree.rs
crates/semaphore/src/protocol/: authentication.rs  compression.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  mmap_vec_mock.rs
crates/storage/src/native/: mmap_vec.rs  mod.rs
crates/trees/: Cargo.toml
crates/trees/src/: lazy_merkle_tree.rs  lib.rs  proof.rs
crates/trees/src/cascading/: mod.rs  storage_ops.rs
crates/trees/src/hashes/: mod.rs  tiny_keccak.rs
crates/trees/src/imt/: mod.rs
crates/trees/src/lazy/: mod.rs
crates/trees/src/trees/: mod.rs
crates/trees/src/trees/cascading/: mod.rs  storage_ops.rs
crates/trees/src/trees/imt/: mod.rs
crates/trees/tests/: equivalent.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
examples/: dylib.rs  dylib_ios.rs
examples/abort/: main.rs
examples/abort_test/: main.rs
scripts/: buildCustomSemaphore.sh
snarkfiles/: semaphore.r1cs  semaphore.wasm
src/: cascading_merkle_tree.rs  circuit.rs  dynamic_merkle_tree.rs  field.rs  generic_storage.rs  hash.rs  identity.rs  incremental_merkle_tree.rs  lazy_merkle_tree.rs  lib.rs  libsemaphore.h  main.rs  merkle_tree.rs  mimc_hash.rs  mimc_tree.rs  packed_proof.rs  poseidon_hash.rs  poseidon_tree.rs  posseidon_hash.rs  proof.rs  protocol.rs  tunables.rs  util.rs
src/cascading_merkle_tree/: storage_ops.rs
src/generic_storage/: mmap_vec.rs
src/incremental_merkle_tree/: incremental_index_calculus.rs
src/ng/: mod.rs
src/poseidon/: constants.rs  mod.rs
src/poseidon_hash_2/: constants.rs  mod.rs
src/protocol/: authentication.rs  mod.rs
supply-chain/: audits.toml  config.toml
tests/: abort.rs
tool-for-humanity-test-main/: .gitignore  Cargo.toml  README.md
tool-for-humanity-test-main/src/: main.rs
