[package]
name = "semaphore"
version = "0.1.0"
authors = [
    "Remco Bloemen <remco@worldcoin.org>",
    "Philipp Sippl <philipp@worldcoin.org>",
]
description = "Rust support library for Semaphore"
keywords = ["worldcoin", "protocol", "signup"]
categories = ["cryptography"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
homepage = "https://github.com/worldcoin/semaphore-rs"
license = "MIT"
repository = "https://github.com/worldcoin/semaphore-rs"

[workspace.dependencies]
# Internal
ark-zkey = { path = "crates/ark-zkey" }
poseidon = { path = "crates/poseidon" }
hasher = { path = "crates/hasher" }
keccak = { path = "crates/keccak" }
trees = { path = "crates/trees" }
storage = { path = "crates/storage" }
semaphore-depth-config = { path = "crates/semaphore-depth-config" }
semaphore-depth-macros = { path = "crates/semaphore-depth-macros" }

# 3rd Party
bincode = "1.3.3"
bytemuck = "1.18"
color-eyre = "0.6"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
derive-where = "1"
ethabi = "18.0.0"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
hex = "0.4.0"
hex-literal = "0.4"
itertools = "0.13"
mmap-rs = "0.6.1"
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
once_cell = "1.8"
proptest = "1.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
rayon = "1.5.1"
reqwest = { version = "0.11", features = ["blocking"] }
ruint = { version = "1.12.3", features = [
    "bytemuck",
    "serde",
    "num-bigint",
    "ark-ff-04",
] }
serde = "1.0"
serde_json = "1.0.79"
serial_test = "3"
sha2 = "0.10.1"
test-case = "3.3.1"
tempfile = "3.0"
thiserror = "1.0.0"
tiny-keccak = { version = "2.0.2" }
tracing-test = "0.2"
witness = { git = "https://github.com/philsippl/circom-witness-rs" }
zeroize = "1.6.0"
memmap2 = "0.9"
flame = "0.2"
flamer = "0.5"

# Proc macros
syn = { version = "2.0.9", features = ["full", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0.53"
quote = "1.0.26"

# Ark
ark-bn254 = { version = "=0.4.0" }
ark-circom = { git = "https://github.com/Dzejkop/circom-compat.git", rev = "3b19f79", features = [
    "circom-2",
] }
ark-ec = { version = "0.4.2", default-features = false, features = [
    "parallel",
] }
ark-ff = { version = "0.4.2", default-features = false, features = [
    "parallel",
    "asm",
] }
ark-groth16 = { version = "=0.4.0", features = ["parallel"] }
ark-relations = { version = "=0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false, features = [
    "parallel",
] }
ark-serialize = { version = "0.4.2", features = ["derive"] }

[features]
default = []
depth_16 = [
    "semaphore-depth-config/depth_16",
    "semaphore-depth-macros/depth_16",
]
depth_20 = [
    "semaphore-depth-config/depth_20",
    "semaphore-depth-macros/depth_20",
]
depth_30 = [
    "semaphore-depth-config/depth_30",
    "semaphore-depth-macros/depth_30",
]

[[bench]]
name = "cascading_merkle_tree"
harness = false

[dependencies]
# Internal
ark-zkey.workspace = true
poseidon.workspace = true
hasher.workspace = true
keccak.workspace = true
trees.workspace = true
storage.workspace = true
semaphore-depth-config.workspace = true
semaphore-depth-macros.workspace = true

# 3rd Party
bincode.workspace = true
bytemuck.workspace = true
color-eyre.workspace = true
ethabi.workspace = true
ethers-core.workspace = true
hex.workspace = true
hex-literal.workspace = true
itertools.workspace = true
mmap-rs.workspace = true
num-bigint.workspace = true
once_cell.workspace = true
rand.workspace = true
rayon.workspace = true
ruint.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
witness.workspace = true
zeroize.workspace = true

# Ark
ark-bn254.workspace = true
ark-circom.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-relations.workspace = true
ark-std.workspace = true

[dev-dependencies]
serial_test.workspace = true
criterion.workspace = true
bincode.workspace = true
proptest.workspace = true
rand_chacha.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tiny-keccak.workspace = true
tracing-test.workspace = true

[build-dependencies]
ark-zkey.workspace = true
color-eyre.workspace = true
reqwest.workspace = true
semaphore-depth-config.workspace = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
