[package]
name = "semaphore-rs-ark-circom"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ark-ff.workspace = true
ark-relations.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-bn254.workspace = true
ark-groth16.workspace = true
ark-poly.workspace = true
ark-crypto-primitives.workspace = true

ruint.workspace = true
serde_json.workspace = true
byteorder.workspace = true
num-traits.workspace = true
num-bigint.workspace = true

thiserror.workspace = true

[features]
# This features does nothing but the ark_std::cfg_into_iter expectes it
parallel = []
