[package]
name = "semaphore-rs-ark-zkey"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
semaphore-rs-ark-circom.workspace = true

color-eyre.workspace = true
memmap2.workspace = true

ark-serialize.workspace = true
ark-bn254.workspace = true
ark-groth16.workspace = true
ark-relations.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
