[package]
name = "semaphore-rs-witness"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ark-bn254 = { workspace = true, features = ["std"] }
ark-ff = { workspace = true, features = ["std"] }
ark-serialize.workspace = true
byteorder.workspace = true
cxx.workspace = true
color-eyre.workspace = true
hex.workspace = true
postcard = { workspace = true, features = ["use-std"] } 
rand.workspace = true
ruint.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
cxx-build.workspace = true

[features]
build-witness = []
