[package]
name = "semaphore-rs-hasher"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytemuck.workspace = true
