[package]
name = "semaphore-rs-keccak"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
semaphore-rs-hasher.workspace = true
tiny-keccak.workspace = true

[features]
default = ["sha3"]
sha3 = ["tiny-keccak/sha3"]
