[package]
name = "semaphore-rs-poseidon"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
semaphore-rs-hasher.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
once_cell.workspace = true
ruint.workspace = true
