[package]
name = "semaphore-rs-depth-config"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
depth_16 = []
depth_20 = []
depth_30 = []
