[package]
name = "semaphore-rs-storage"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytemuck.workspace = true
color-eyre.workspace = true
mmap-rs.workspace = true
tempfile.workspace = true
