[package]
name = "trees"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
hasher.workspace = true
storage.workspace = true

# 3rd Party
bytemuck.workspace = true
color-eyre.workspace = true
hex.workspace = true
hex-literal.workspace = true
itertools.workspace = true
mmap-rs.workspace = true
once_cell.workspace = true
rayon.workspace = true
ruint.workspace = true
serde.workspace = true
thiserror.workspace = true
tiny-keccak = { workspace = true, features = ["sha3"] }

# Ark
ark-bn254.workspace = true
ark-circom.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-relations.workspace = true
ark-std.workspace = true

[dev-dependencies]
poseidon.workspace = true
keccak.workspace = true

rand.workspace = true
serial_test.workspace = true
tempfile.workspace = true
test-case.workspace = true
